--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
 node_js:
 - 8.9.0
+before_install:
+- openssl aes-256-cbc -K $encrypted_9d3e899cd6a4_key -iv $encrypted_9d3e899cd6a4_iv
+  -in id_rsa.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
+- echo -e "Host 10.211.55.5\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 after_script:
-  - ssh virtual "cd /usr/loacal/travisRepository && git pull && pm2 restart app.js"
+  - ssh virtual "cd /usr/loacal/travisRepository && git pull && pm2 restart app.js" 
