--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
 - chmod 600 ~/.ssh/id_rsa
 - echo -e "Host 10.211.55.5\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 after_script:
-  - ssh virtual "cd /usr/loacal/travisRepository && git pull && pm2 restart app.js" 
+  - ssh virtual 'cd /usr/loacal/travisRepository && git pull && pm2 restart app.js'
