--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,7 @@ before_install:
 
 
 after_success:
-  - ssh virtual 'cd /usr/loacal/travisRepository && git pull && pm2 restart app.js'
+  - ssh root@10.211.55.5 'cd /usr/loacal/travisRepository && git pull && pm2 restart app.js'
+
+addons:
+  ssh_known_hosts: 10.211.55.5
