--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_9d3e899cd6a4_key -iv $encrypted_9d3e899cd6a4_iv
-  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
+  -in id_rsa.enc -out ~/.ssh/id_rsa -d
 - chmod 600 ~/.ssh/id_rsa
 - echo -e "Host 10.211.55.5\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 
