--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,7 @@
 language: node_js
+
 node_js:
 - 8.9.0
-before_install:
-- openssl aes-256-cbc -K $encrypted_9d3e899cd6a4_key -iv $encrypted_9d3e899cd6a4_iv
-  -in kim_rsa.enc -out ~/.ssh/kim_rsa -d
-- chmod 600 ~/.ssh/kim_rsa
-- echo -e "Host 10.211.55.5\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 
 after_success:
-- ssh root@10.211.55.5 'cd /usr/local/travisRepository && git pull && pm2 restart
-  app.js'
-addons:
-  ssh_known_hosts: 10.211.55.5
+- ssh root@10.211.55.5 'cd /usr/local/travisRepository && git pull && pm2 restart app.js'
